fix：修复分组路由设置
