# server/docs/swagger.yaml
@@ -2440,6 +2440,9 @@ definitions:
         type: number
       name:
         type: string
+      networkType:
+        description: 节点网络模式
+        type: string
       redeemCodeOnly:
         description: 是否仅支持兑换码兑换
         type: boolean
@@ -2448,6 +2451,7 @@ definitions:
       status:
         type: string
       type:
+        description: 虚拟化/Provider类型
         type: string
       vmEnabled:
         type: boolean
